@@ -10,8 +10,8 @@
                 <p>The password for your account, <strong>${record.login}</strong>, has been reset.<br/>
                 You must set a new one from the user's preferences.<br/>
                 You can connect with this temporary password <strong>${record.password_reset}</strong> to</p>
-                <a href="tryton://${hostname}/${database}">tryton://${hostname}/${database}</a><br/>
-                <a href="https://${hostname}/#${database}">https://${hostname}/#${database}</a><br/>
+                <a href="tryton://${host}/${database}">tryton://${host}/${database}</a><br/>
+                <a href="${http_host}/#${database}">${http_host}/#${database}</a><br/>
             </div>
             <hr style="margin-top: 20px; border-style: solid none none; border-color: #EEE"></hr>
             <div style="font-size: 80%; color: #777">
